tests/NormalTests/paczka1/fuzzy1/91482091.err
Error in line 4: 3VamO S961 38,7
Error in line 3: A462 A462 58,2
Error in line 18: Y1czW1JOqI A98 10,8
